dynamix/force-app/main/default/objects/Account/fields/Tin_Number__c.field-meta.xml
<CustomField>
    <fullName>Tin_Number__c</fullName>
    <label>Tin Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>