dynamix/force-app/main/default/objects/Account/fields/Upload_Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Upload_Aadhar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Aadhar</label>
    <type>Checkbox</type>
</CustomField>