dynamix/force-app/main/default/objects/Account/fields/Upload_PAN_Card__c.field-meta.xml
<CustomField>
    <fullName>Upload_PAN_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload PAN Card</label>
    <type>Checkbox</type>
</CustomField>