dynamix/force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KDMC</fullName>
            </value>
            <value>
                <fullName>NAVI MUMBAI</fullName>
            </value>
            <value>
                <fullName>PUNE</fullName>
            </value>
            <value>
                <fullName>THANE</fullName>
            </value>
            <value>
                <fullName>CENTRAL MUMBAI</fullName>
            </value>
            <value>
                <fullName>WESTERN MUMBAI</fullName>
            </value>
            <value>
                <fullName>SOUTH MUMBAI</fullName>
            </value>
            <value>
                <fullName>ULHASNAGAR</fullName>
            </value>
            <value>
                <fullName>ULHASNAGAR and BEYOND</fullName>
            </value>
            <value>
                <fullName>CHEMBUR</fullName>
            </value>
            <value>
                <fullName>MIRA ROAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>