dynamix/force-app/main/default/objects/Account/recordTypes/Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner</fullName>
    <active>true</active>
    <label>Channel Partner</label>
</RecordType>