dynamix/force-app/main/default/objects/Account/validationRules/Landline_no_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Landline_no_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsPersonAccount,NOT(ISBLANK(Landline__c)),NOT(ISNUMBER(Landline__c)))</errorConditionFormula>
    <errorDisplayField>Landline__c</errorDisplayField>
    <errorMessage>Landline number can contains only number.</errorMessage>
</ValidationRule>