dynamix/force-app/main/default/objects/Account/validationRules/Organization_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Organization_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsPersonAccount,NOT(ISBLANK(Organisation_Phone_Number__c)),NOT(ISNUMBER(Organisation_Phone_Number__c)))</errorConditionFormula>
    <errorDisplayField>Organisation_Phone_Number__c</errorDisplayField>
    <errorMessage>Organization phone number can contains only number.</errorMessage>
</ValidationRule>