dynamix/force-app/main/default/objects/Account/validationRules/Pan_Card_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pan_Card_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( PAN_No__pc )),
!REGEX( PAN_No__pc , &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;))</errorConditionFormula>
    <errorDisplayField>PAN_No__pc</errorDisplayField>
    <errorMessage>PAN number format should XXXXX0000X.</errorMessage>
</ValidationRule>