dynamix/force-app/main/default/objects/Account/validationRules/Pan_Details_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pan_Details_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsPersonAccount,NOT(ISBLANK(PAN_Details__c)),
!REGEX(PAN_Details__c, &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;))</errorConditionFormula>
    <errorDisplayField>PAN_Details__c</errorDisplayField>
    <errorMessage>PAN number format should XXXXX0000X.</errorMessage>
</ValidationRule>