dynamix/force-app/main/default/objects/Account/validationRules/Post_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsPersonAccount,NOT(ISBLANK(Post_Code__c)),NOT(ISNUMBER(Post_Code__c)))</errorConditionFormula>
    <errorDisplayField>Post_Code__c</errorDisplayField>
    <errorMessage>Post Code can contains only number.</errorMessage>
</ValidationRule>