dynamix/force-app/main/default/objects/Account/validationRules/Postal_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsPersonAccount,NOT(ISBLANK(Postal_Code__c)),
NOT(ISNUMBER(Postal_Code__c)))</errorConditionFormula>
    <errorDisplayField>Postal_Code__c</errorDisplayField>
    <errorMessage>Post Code can contains only number.</errorMessage>
</ValidationRule>