dynamix/force-app/main/default/objects/Account/listViews/Individual_Accounts.listView-meta.xml
<ListView>
    <fullName>Individual_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_PHONE3</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Individual Accounts</label>
</ListView>